// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reserved schema names execute class escapes reserved identifiers 1`] = `
"export class ReservedClient implements ReservedInstance {
  client: ISigningCosmWasmClient;
  sender: string;
  contractAddress: string;
  constructor(client: ISigningCosmWasmClient, sender: string, contractAddress: string) {
    this.client = client;
    this.sender = sender;
    this.contractAddress = contractAddress;
    this._constructor = this._constructor.bind(this);
  }
  _constructor = async ({
    class: _class,
    default: _default,
    delete: _delete
  }: {
    class: string;
    default: string;
    delete: boolean;
  }, fee_: number | StdFee | "auto" = "auto", memo_?: string, funds_?: Coin[]): Promise<any> => {
    return await this.client.execute(this.sender, this.contractAddress, {
      constructor: {
        class: _class,
        default: _default,
        delete: _delete
      }
    }, fee_, memo_, funds_);
  };
}"
`;

exports[`reserved schema names execute interface escapes reserved identifiers 1`] = `
"export interface ReservedInstance {
  contractAddress: string;
  sender: string;
  _constructor: (params: {
    class: string;
    default: string;
    delete: boolean;
  }, fee_?: number | StdFee | "auto", memo_?: string, funds_?: Coin[]) => Promise<any>;
}"
`;

exports[`reserved schema names query class escapes reserved identifiers 1`] = `
"export class ReservedQueryClient implements ReservedReadOnlyInstance {
  client: ICosmWasmClient;
  contractAddress: string;
  constructor(client: ICosmWasmClient, contractAddress: string) {
    this.client = client;
    this.contractAddress = contractAddress;
    this._constructor = this._constructor.bind(this);
  }
  _constructor = async ({
    class: _class,
    default: _default,
    delete: _delete
  }: {
    class: string;
    default: string;
    delete: boolean;
  }): Promise<ConstructorResponse> => {
    return this.client.queryContractSmart(this.contractAddress, {
      constructor: {
        class: _class,
        default: _default,
        delete: _delete
      }
    });
  };
}"
`;
